# tlg-v2

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  bot.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  docs.yml  feature_request.yml
.github/workflows/: ci.yml
cogs/: __init__.py  dbuser.py  example.py
cogs/dev/: __init__.py  alive.py  cog_load.py  db_decorators.py  dbstats.py  dbtest.py  listcogs.py  loglevel.py  logs.py  reload.py
cogs/minimal/: __init__.py  minimal.py
config/: settings.py
core/: bot.py
database/: MODELS.md  __init__.py  connection.py  models.py  services.py
utils/: logging_config.py
